cmake_minimum_required(VERSION 3.3)
project(CppClasses)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp CppClass01.cpp CppClass01.h CppBasics/ch01w01.cpp CppBasics/ch01w01.h)
add_executable(CppClasses main.cpp)
add_executable(CppClass01 CppClass01.cpp CppClass01.h)
add_executable(ch01w01 CppBasics/ch01w01.cpp CppBasics/ch01w01.h)
add_executable(ch01w02 ch01w02.cpp ch01w02.h)
add_executable(ch02cl02 ch02cl02.cpp ch02cl02.h)
add_executable(ch02cl03 ch02cl03.cpp ch02cl03.h)
add_executable(ch02cl04 ch02cl04.cpp ch02cl04.h)
add_executable(ch02cl05 ch02cl05.cpp ch02cl05.h)
add_executable(ch02w01 ch02w01.cpp ch02w01.h)
add_executable(ch03cl01 ch03cl01.cpp ch03cl01.h)
add_executable(ch03cl02 ch03cl02.cpp ch03cl02.h)
add_executable(ch03cl04 ch03cl04.cpp ch03cl04.h)
add_executable(ch3cl06 ch03cl06.cpp ch03cl06.h)
add_executable(ch03cl07 ch03cl07.cpp ch03cl07.h)