cmake_minimum_required(VERSION 3.3)
project(CppClasses)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp CppBasics/ch01/CppClass01.cpp CppBasics/ch01/CppClass01.h CppBasics/ch01/ch01w01.cpp CppBasics/ch01/ch01w01.h)
add_executable(CppClasses main.cpp)
add_executable(CppClass01 CppBasics/ch01/CppClass01.cpp CppBasics/ch01/CppClass01.h)
add_executable(ch01w01 CppBasics/ch01/ch01w01.cpp CppBasics/ch01/ch01w01.h)
add_executable(ch01w02 CppBasics/ch01/ch01w02.cpp CppBasics/ch01/ch01w02.h)
add_executable(ch02cl02 CppBasics/ch02/ch02cl02.cpp CppBasics/ch02/ch02cl02.h)
add_executable(ch02cl03 CppBasics/ch02/ch02cl03.cpp CppBasics/ch02/ch02cl03.h)
add_executable(ch02cl04 CppBasics/ch02/ch02cl04.cpp CppBasics/ch02/ch02cl04.h)
add_executable(ch02cl05 CppBasics/ch02/ch02cl05.cpp CppBasics/ch02/ch02cl05.h)
add_executable(ch02w01 CppBasics/ch02/ch02w01.cpp CppBasics/ch02/ch02w01.h)
add_executable(ch03cl01 CppBasics/ch03/ch03cl01.cpp CppBasics/ch03/ch03cl01.h)
add_executable(ch03cl02 CppBasics/ch03/ch03cl02.cpp CppBasics/ch03/ch03cl02.h)
add_executable(ch03cl04 CppBasics/ch03/ch03cl04.cpp CppBasics/ch03/ch03cl04.h)
add_executable(ch3cl06 CppBasics/ch03/ch03cl06.cpp CppBasics/ch03/ch03cl06.h)
add_executable(ch03cl07 CppBasics/ch03/ch03cl07.cpp CppBasics/ch03/ch03cl07.h)
add_executable(ch04cl01 CppBasics/ch04/ch04cl01.cpp CppBasics/ch04/ch04cl01.h CppBasics/ch04/ch04cl06.cpp CppBasics/ch04/ch04cl06.h)
add_executable(ch04cl02 CppBasics/ch04/ch04cl02.cpp CppBasics/ch04/ch04cl02.h)
add_executable(ch04cl03 CppBasics/ch04/ch04cl03.cpp CppBasics/ch04/ch04cl03.h)
add_executable(ch04cl04 CppBasics/ch04/ch04cl04.cpp CppBasics/ch04/ch04cl04.h)
add_executable(ch04cl05 CppBasics/ch04/ch04cl05.cpp CppBasics/ch04/ch04cl05.h)
add_executable(ch04cl06 CppBasics/ch04/ch04cl06.cpp CppBasics/ch04/ch04cl06.h)
add_executable(ch04cl07 CppBasics/ch04/ch04cl07.cpp CppBasics/ch04/ch04cl07.h)
add_executable(ch04cl08 CppBasics/ch04/ch04cl08.cpp CppBasics/ch04/ch04cl08.h)
add_executable(ch04cl09 CppBasics/ch04/ch04cl09.cpp CppBasics/ch04/ch04cl09.h)
add_executable(ch04hw02 CppBasics/ch04/ch04hw02.cpp CppBasics/ch04/ch04hw02.h)
add_executable(ch05cl01 CppBasics/ch05/ch05cl01.cpp CppBasics/ch05/ch05cl01.h)
add_executable(ch05cl02 CppBasics/ch05/ch05cl02.cpp CppBasics/ch05/ch05cl02.h)
add_executable(ch05cl03 CppBasics/ch05/ch05cl03.cpp CppBasics/ch05/ch05cl03.h)
add_executable(ch05cl04 CppBasics/ch05/ch05cl04.cpp CppBasics/ch05/ch05cl04.h)
add_executable(ch05cl05 CppBasics/ch05/ch05cl05.cpp CppBasics/ch05/ch05cl05.h)
add_executable(ch05cl08 CppBasics/ch05/ch05cl08.cpp CppBasics/ch05/ch05cl08.h)
add_executable(ch05cl09 CppBasics/ch05/ch05cl09.cpp CppBasics/ch05/ch05cl09.h)
add_executable(ch05cl10 CppBasics/ch05/ch05cl10.cpp CppBasics/ch05/ch05cl10.h)
add_executable(ch05ex05 CppBasics/ch05/ch05ex05.cpp CppBasics/ch05/ch05ex05.h)
add_executable(ch05ex07 CppBasics/ch05/ch05ex07.cpp CppBasics/ch05/ch05ex07.h)
add_executable(ch06cl01 CppBasics/ch06/ch06cl01.cpp CppBasics/ch06/ch06cl01.h)
add_executable(ch06cl02 CppBasics/ch06/ch06cl02.cpp CppBasics/ch06/ch06cl02.h)